--- a/Script/DASC_EV_Jonas.Rmd
+++ b/Script/DASC_EV_Jonas.Rmd
@@ -3,90 +3,180 @@ title: "EV"
 output: html_document
 ---
 ### https://www.r-graph-gallery.com
-
 ```{r}
 library(tidyverse)
-```
-
-```{r}
 ev <- read_csv("/Users/jonasbrockmoller/Documents/GitHub/ElectricVehiclesEDA/Dataset/ElectricCarData_Clean_Me.csv")
-```
-
-```{r}
 ev
 ```
 
-### Creating a ggplot
 
+
+### 1. Does the battery pack size affect the fast charging rates of evs?
 ```{r}
-ggplot(data = ev %>% filter(AccelSec < 15)) +
-  geom_point(mapping = aes(x = AccelSec, y = Range_Km))
+ev2 <- ev %>% filter(BodyStyle != "SPV")
+ev2 <- ev2 %>% filter(BodyStyle != "Station")
+ev2 <- ev2 %>% filter(BodyStyle != "MPV")
+ev2 <- ev2 %>% filter(Battery_Pack_Kwh <= 100)
+
+
+
+ggplot(ev2, aes(x=Battery_Pack_Kwh, y=FastCharge_KmH)) +
+geom_point() +
+geom_smooth()
+
+
+
+ggplot(ev2, aes(x=Battery_Pack_Kwh, y=FastCharge_KmH, color=BodyStyle, group = BodyStyle)) +
+geom_point()
 ```
 
+
+
+
+
+
+### 2. Which company produces the on average longest range vehicles?
 ```{r}
-ggplot(data = ev %>% filter(FastCharge_KmH > 0)) +
-  geom_point(mapping = aes(x = FastCharge_KmH, y = Range_Km))
+ev2 <- ev %>% filter(BodyStyle != "SPV")
+ev2 <- ev2 %>% filter(BodyStyle != "Station")
+ev2 <- ev2 %>% filter(BodyStyle != "MPV")
+ev2 <- ev2 %>% filter(Range_Km <= 500)
+
+
+
+data_histogram <- ev2 %>%
+mutate(Brand = factor(Brand)) %>%
+group_by(Brand) %>%
+summarize(mean_range = round(mean(Range_Km), 2))
+
+
+
+ggplot(data_histogram, aes(x = Brand, y = mean_range)) +
+geom_bar(stat = "identity") +
+geom_text(aes(label = mean_range),
+hjust = 1.5,
+color = "white",
+size = 3) +
+theme_classic() +
+coord_flip() +
+xlab("Brand") + ylab("average range")
 ```
+
+
+
+
+### 3. How does the efficiency of the car affect the 0-100 acceleration times?
+```{r}
+ggplot(ev, aes(x=Efficiency_WhKm, y=AccelSec)) +
+geom_point() +
+geom_smooth()
+
+
+
+ggplot(ev, aes(x=Efficiency_WhKm, y=AccelSec, color=BodyStyle, group = BodyStyle)) +
+geom_point()
+
+
+
+ev2 <- ev %>% filter(BodyStyle != "SPV")
+ev2 <- ev2 %>% filter(BodyStyle != "Station")
+ev2 <- ev2 %>% filter(BodyStyle != "MPV")
+ggplot(ev2, aes(x=Efficiency_WhKm, y=AccelSec, color=BodyStyle, group = BodyStyle)) +
+geom_boxplot()
+```
+
+
+
+
+### 4. Do all cars with a range above the average have the ability to fast charge?
+```{r}
+ggplot(ev, aes(x=PriceEuro, y=Range_Km, color = RapidCharge)) +
+geom_point() +
+geom_line(data=ev, aes(PriceEuro, mean(ev$Range_Km)))
+```
+
+
+
+
+
+
+### 5. Does the battery pack size have a negative impact on efficiency?
+```{r}
+ev2 <- ev %>% filter(BodyStyle != "SPV")
+ev2 <- ev2 %>% filter(BodyStyle != "Station")
+ev2 <- ev2 %>% filter(BodyStyle != "MPV")
+ev2 <- ev2 %>% filter(Battery_Pack_Kwh <= 100)
+
+
+
+ggplot(ev2, aes(x=Battery_Pack_Kwh, y=Efficiency_WhKm)) +
+geom_point() +
+geom_smooth()
+
+
+
+ggplot(ev2, aes(x=Battery_Pack_Kwh, y=Efficiency_WhKm, color=BodyStyle, group = BodyStyle)) +
+geom_point()
+```
+
+
+
+
 
 ### 6. Does the body style affect the range of the vehicle?
+
+
 
 ```{r}
 library(ggplot2)
 library(ggExtra)
 
+
+
 ev2 <- ev %>% filter(BodyStyle != "SPV")
 ev2 <- ev2 %>% filter(BodyStyle != "Station")
 ev2 <- ev2 %>% filter(BodyStyle != "MPV")
+
+
 
 ### battery pack size relevant here
 
-ggplot(ev2, aes(x=Range_Km, y=BodyStyle)) + 
-    geom_boxplot(
-        
-        # custom boxes
-        color="blue",
-        fill="blue",
-        alpha=0.2,
-        
-        # Notch?
-        notch=TRUE,
-        notchwidth = 0.8,
-        
-        # custom outliers
-        outlier.colour="red",
-        outlier.fill="red",
-        outlier.size=3
-    
-    )
 
-ggplot(ev2, aes(x=as.factor(BodyStyle), y=Range_Km)) + 
-    geom_boxplot(fill="slateblue", alpha=0.2) + 
-    xlab("cyl")
+
+ggplot(ev2, aes(x=Range_Km, y=BodyStyle)) +
+geom_boxplot(
+
+# custom boxes
+color="blue",
+fill="blue",
+alpha=0.2,
+
+# Notch?
+notch=TRUE,
+notchwidth = 0.8,
+
+# custom outliers
+outlier.colour="red",
+outlier.fill="red",
+outlier.size=3
+
+)
+
+
+
+ggplot(ev2, aes(x=as.factor(BodyStyle), y=Range_Km)) +
+geom_boxplot(fill="slateblue", alpha=0.2) +
+xlab("BodyStyle")
 ```
 
-### 6. What body type are the quickest accelerating cars?
 
+
+
+### 7. What body type are the quickest accelerating cars?
 ```{r}
-
 ev2 <- ev %>% filter(BodyStyle != "SPV")
 ev2 <- ev2 %>% filter(BodyStyle != "Station")
 ev2 <- ev2 %>% filter(BodyStyle != "MPV")
-
-# reorder is close to order, but is made to change the order of the factor levels.
-ev2$class = with(ev2, reorder(BodyStyle, AccelSec, median))
-
-p <- ev2 %>%
-  ggplot( aes(x=BodyStyle, y=AccelSec, fill=BodyStyle)) + 
-    geom_violin() +
-    xlab("class") +
-    theme(legend.position="none") +
-    xlab("")
-#p
-print(p)
-```
-
-### Do cars with certain plug type have the highest range?
-```{r}
-ggplot(data = ev) +
-  geom_point(mapping = aes(x = PlugType, y = Range_Km))
+ggplot(ev2, aes(x=AccelSec, y=BodyStyle)) +
+geom_boxplot()
 ```
