--- a/Regression/Regression-Jonas.Rmd
+++ b/Regression/Regression-Jonas.Rmd
@@ -3,49 +3,68 @@ title: "Regression-Jonas"
 output: html_document
 ---
 ```{r}
-library(tidyverse)
-ev <- read_csv("/Users/jonasbrockmoller/Documents/GitHub/ElectricVehiclesEDA/Dataset/ElectricCarData_Clean_Me.csv")
-ev
+install.packages("tidyverse")
+install.packages("gghighlight")
+install.packages("plyr")
 ```
-This is my first try of a Simple Linear Regression
 
-1. Show variables in a scatter plot (independent variable X = BatteryPack_size, depended variables Y = Range in km)
 ```{r}
-  ggplot(ev, aes(x=Battery_Pack_Kwh, y=Range_Km)) + geom_point() 
+ev2 <- ev %>% filter(Battery_Pack_Kwh >= 100)
+  ev2
+  
+  ev3 <- ev %>% filter(Range_Km >= 500)
+  ev3
 ```
-2. lm()-Command
+
+# Regression Jonas Brockmöller
+The goal of a relationship is to measure the relationship of 2 (or more) variables. It will be a challenge to find a graph the can fit every data point in our data set. For my regression I decided to investigate the relationship of the Battery size to the range in kilometers. It is to be expected that I am going to try and prove my hypothesis that the bigger the battery is, the more kilometers the car can drive. The plan is to start simple by investigateing the relationship of only 2 variable first, but it leaves the opportunity open to add more variables in the process.
+
+## 1. Show variables in a scatter plot (independent variable X = BatteryPack_size, depended variables Y = Range in km)
+```{r}
+  library(tidyverse)
+  library(gghighlight)
+  ev <- read_csv("/Users/jonasbrockmoller/Documents/GitHub/ElectricVehiclesEDA/Dataset/ElectricCarData_Clean_Me.csv")
+  ggplot(ev, aes(x=Battery_Pack_Kwh, y=Range_Km)) + geom_point() + gghighlight(Battery_Pack_Kwh > 100)
+```
+In this first step the relationship of the X-variable (BatteryPackSize) and the Y-Variable(Range in km) is presented. In addition the outliers have been found and investigated.
+
+## 2. lm()-Command, regression line and model summary
 ```{r}
   model <- lm(Range_Km ~ Battery_Pack_Kwh, data = ev)
-```
-3. geom_line()
-```{r}
   ggplot(ev, aes(x=Battery_Pack_Kwh, y=Range_Km)) + geom_point() + geom_smooth(method='lm', formula= y~x)
+  ggplot(ev, aes(x=Battery_Pack_Kwh, y=Range_Km)) + geom_point() + geom_smooth(method='lm', formula= y~x) + gghighlight(Range_Km == 575)
+  summary(model)
 ```
-4. summary(model)
-```{r}
-summary(model)
-```
+#### 4.1 Coefficients and regression model results
+Shown above is the simple linear regression model. The single highlighted data point is the biggest outlier in this regression model.Because of this I feel inclined to say that the regression model is showing a kind of strong relationship between the 2 variables.
 
-4.1 Coefficients and results
+But lets review the regression results first:
+* The extremely low p-value (< 2e-16) is marked with *** which is the best possible case. In this test the Null-Hypothesis is being investigated. In this case the possiblity that the battery pack size does NOT have a relationship with the range of an electirc vehicle. Luckily the result was well under 0.5 and because of this the Null-hypothesis can be rejected. 
 
-  The results show that:
-  - P-Value is very smal (smaller than 0.05) -> Null-Hypothesis can be discarded
-  - R-squared is at 82.87% -> This means 82% of the variance of the dependend variable (Y=range in km) can be explained by this model -> good value
-  - 3.850 is the slope of the graph (Steigung des Graphen). This means per 1 kwh more battery size the car can go 3.85 km more
-  - 86.752 is the value of x=0. Does not make much sense for this example but it means with 0 battery size a ar can go 86 km.
-  
+* The Multiple R-squared value is at 82.87% which is a great result and mean that this regression model can explain 82% of the given data set. This model is by far not under-fitting the data.
+
+* The Estimate value for the Intercept is a bit of nonsense in this example because it means that an ev with a batterypack size of 0 has a range of 86.752 kilometers.
+
+* The Estimate value for the batterypack size variable on the other hand is representing a very important part of a linear model. The 3.850 describe the slope of the graph. That means per 1 KwH larger batterypack size an electric vehicle can go 3.85 km more.
+
+* From a mathematical standpoint looking at the formular for linear graphs f(x) = mx + b, then is the "m" described by the estimate for the batterypack size and the "b" is equal to the estimate value of the intercept.
+
 ```{r}
  plot(model)
 ```
+Above are 4 plots of the simple linear regression model. Even though it has been made clear in the previous paragraph that this model still has issues and that there is room for improvement I want to go over the result and explain where the issues are and how they can be improved in later versions of the model:
+
+
   
-  Regression part 2
   
-  From the ggplot above I can see that the simple linear model does fit the data, but a curviliniear, especially a cubic method could be   an even better fit here:
+# Regression part 2
+  
+From the ggplot above I can see that the simple linear model does fit the data, but a curviliniear, especially a cubic method could be an even better fit here:
   
 ```{r}
-cor(ev$Battery_Pack_Kwh, I(ev$Battery_Pack_Kwh^2))
+  cor(ev$Battery_Pack_Kwh, I(ev$Battery_Pack_Kwh^2))
 ```
-  This command chacks for correclatio of 2 varaiables, because multivariate models make the assumption that all values are independent from each other. This means we have a structurall correlation type here. Because of this the data cannot be read afterwards from the model. But the model can still fit the data very well. It makes it just hard to analyse the model.
+This command chacks for correclation of 2 varaiables, because multivariate models make the assumption that all values are independent from each other. This means we have a structurall correlation type here. Because of this the data cannot be read afterwards from the model. But the model can still fit the data very well. It makes it just hard to analyse the model.
   
 ```{r}
   model <- lm(Range_Km ~ Battery_Pack_Kwh + I(Battery_Pack_Kwh^2) + I(Battery_Pack_Kwh ^3), data = ev)
@@ -67,21 +86,14 @@ ggplot(ev, aes(x = BodyStyle, y = Range_Km)) +
   geom_boxplot()
 ```
 
-2. lm()-Command
+2. lm()-Command, summary(model) and plot(model2)
 ```{r}
   model2 <- lm(Range_Km ~ Battery_Pack_Kwh + BodyStyle, data = ev)
+  summary(model2)
+  plot(model2)
 ```
 
-3. summary(model)
-```{r}
-summary(model2)
-```
 The new model shows improvemnts in the r-squared and F-statistic
-
-
-```{r}
- plot(model2)
-```
 
 ```{r}
  anova(model, model2)
